Improve side bar and fix layout issues

--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -13,11 +13,9 @@
   width: 100%;
   clear: both;
   
-  /* sticky footer fix start */ 
-  position: absolute;
-  bottom: 0em;
+  position: static;
+  bottom: auto;
   height: auto;
-  /* sticky footer fix end */
 
   margin-top: 3em;
 
